--- a/frontend/src/static/css/createGame/createGame.css
+++ b/frontend/src/static/css/createGame/createGame.css
@@ -1,4 +1,4 @@
-.dashboard-page-container{
+.createGame-page-container{
     position: absolute;
     top: 0;
     left: 0;
@@ -14,7 +14,7 @@
     flex-direction: column;
 }
 
-.welcome{
+.title-creategame{
     display: flex;               
     justify-content: center;             
     padding: 20px;  
@@ -26,7 +26,7 @@
     color: white;     
 }
 
-.game-table {
+.inputs-table {
     width: 90%;
     margin: 20px auto;
     border-collapse:collapse;
@@ -38,24 +38,32 @@
     table-layout: fixed;
 }
 
-.th {
-    padding: 10px;
-    font-size: 1.2em;
-    text-align: left;
-    background-color: #33678A;
-    color: white;
-}
 
-.td {
-    padding: 10px;
+.td2 {
+    padding: 40px;
     text-align: left;
     border-top: 1px solid #517A94;
+    font-size: 40px;
 }
 
-.tr {
-    border-bottom: 1px solid #517A94;
-    align-items: center;
-    justify-content: center;
+.input {
+    width: 300px;   
+    height: 40px;   
+    padding: 20px;  
+    font-size: 16px; 
+    margin-left: 30px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+input::placeholder {
+    color: #888;
+    font-size: 14px;
+    font-style: italic;
+    
 }
 
 
+.botonCreate {
+    width: 300px;
+}
