--- a/frontend/src/static/css/dashboard/dashb.css
+++ b/frontend/src/static/css/dashboard/dashb.css
@@ -38,7 +38,7 @@
     table-layout: fixed;
 }
 
-.th {
+.cabeza {
     padding: 10px;
     font-size: 1.2em;
     text-align: left;
@@ -46,13 +46,13 @@
     color: white;
 }
 
-.td {
+.celda {
     padding: 10px;
     text-align: left;
     border-top: 1px solid #517A94;
 }
 
-.tr {
+.fila {
     border-bottom: 1px solid #517A94;
     align-items: center;
     justify-content: center;
