creacion partidaController, Service y Repository

--- a/frontend/src/static/css/home/home.css
+++ b/frontend/src/static/css/home/home.css
@@ -62,4 +62,9 @@
   .botones-juntos > * {
     flex-shrink: 0; /* Evita que los botones se reduzcan */
   }
+
   
+.crear-partida {
+    display: flex;
+    justify-content: center;
+  }
