--- a/frontend/src/static/css/createGame/createGame.css
+++ b/frontend/src/static/css/createGame/createGame.css
@@ -23,7 +23,7 @@
     border: 2px solid black;      
     margin-left: 10px; 
     margin-right: 10px;  
-    color: white;     
+    background-color: rgba(255, 255, 255, 0.2);     
 }
 
 .inputs-table {
