--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -1,3 +1,104 @@
 .rotarFicha {
     transform: rotate(60deg);
 }
+
+.gameContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../../images/gameBackground.jpg');
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.game-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr auto;
+    width: 90vw;
+    height: 90vh;
+    background-color: #1c1c1c;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.game-board {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    background-color: #333;
+    border: 2px solid #444;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-sidebar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    padding: 20px;
+    background-color: #3a3a3a;
+    border-right: 2px solid #444;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.player-sidebar h2 {
+    color: #f5b342;
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.player-sidebar p {
+    margin: 10px 0;
+}
+
+.action-button {
+    padding: 10px 20px;
+    margin-top: 20px;
+    background-color: #f5b342;
+    color: #333;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.action-button:hover {
+    background-color: #e1a329;
+}
+
+.chat-area {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    background-color: #2b2b2b;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    border-top: 2px solid #444;
+}
+
+.messages {
+    flex: 1;
+    overflow-y: auto;
+    padding-right: 10px;
+    max-height: 100px;
+}
+
+.chat-input {
+    flex: 0.4;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #3d3d3d;
+    color: #e1e1e1;
+}
