--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -56,7 +56,7 @@
     width: 800px;
     height: 1200px;
     border-radius: 10px;
-    background-color: rgba(4, 149, 47, 0.432);
+    background-color:  #1e95a2;
     border: solid;
 }
 
@@ -69,7 +69,18 @@
     font-size: 18px;
     border-radius: 5px;
     margin-top: 10px;
-    border: solid #2b2b2b;
+    border: solid #2a554f;
+  }
+
+  .grid-item18 {
+    color: white;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    border-radius: 5px;
+    margin-top: 10px;
   }
 
   .grid-item:nth-child(3n + 1) {
@@ -78,6 +89,15 @@
   .grid-item:nth-child(3n + 3) {
     transform: translateY(88px);
   }
+
+.users-table {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 80px;
+}
 
 .game-board {
     grid-column: 2 / 3;
@@ -154,6 +174,23 @@
     color: #e1e1e1;
 }
 
+.table-row {
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    text-align: center;
+    border-top: 1px solid black;
+}
+
+.table-cell {
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    text-align: center;
+    border-top: 1px solid black;
+}
 
 
 
