--- a/frontend/src/static/css/createGame/createGame.css
+++ b/frontend/src/static/css/createGame/createGame.css
@@ -12,6 +12,7 @@
     height: 100%;
     width: 100%;
     flex-direction: column;
+    
 }
 
 .title-creategame{
@@ -52,7 +53,7 @@
     padding: 20px;  
     font-size: 16px; 
     margin-left: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 40px; /* Aumenta este valor */
     color: #333;
 }
 
@@ -62,7 +63,15 @@ input::placeholder {
     font-style: italic;
     
 }
-
+.custom-form-input{
+    width: 450px;   
+    height: 40px;   
+    padding: 20px;  
+    font-size: 16px; 
+    margin-left: 30px;
+    margin-bottom: 40px; /* Aumenta este valor */
+    color: #333;
+}
 
 .botonCreate {
     width: 300px;
