--- a/frontend/src/static/css/game/lobby.css
+++ b/frontend/src/static/css/game/lobby.css
@@ -20,6 +20,7 @@
     margin-top: 3%;
     
 }
+
 .lobbyTitleContainer {  
     margin-top: 5%;
     background-color: rgba(255, 255, 255, 0.6);
@@ -39,4 +40,11 @@
     display: flex;
     flex-direction: column;
     align-self: flex-end;
+}
+
+.passwordContainer {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    color: rgb(55, 255, 0);
 }
