--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -86,6 +86,37 @@
   transform: translateY(20px);
 }
 
+.grid-item2 {
+  color: white;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    border-radius: 5px;
+    margin-top: 10px;
+    border: solid #2a554f;
+}
+
+.grid-item2 img {
+  width: 80px; 
+  height: auto;
+  margin: 2px; 
+  transition: transform 0.2s ease-in-out;
+}
+
+.grid-item2 img:hover {
+  transform: scale(1.2);
+  z-index: 10;
+}
+
+.grid-item2 span {
+  position: absolute;
+  bottom: 5px;
+  font-size: 12px;
+  color: #333;
+}
+
 .users-table {
     position: absolute;
     height: 100%;
