--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -61,6 +61,17 @@
     padding-bottom: 110px;
 }
 
+.grid1-100 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  height: 100%;
+  background-color:  #3A6B76;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 110px;
+}
+
 .grid2 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -68,6 +79,21 @@
     height: 20%;
     justify-self: flex-end;
     background-color:  #193963;
+}
+
+.grid3 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  height: 20%;
+  background-color:  #193963;
+}
+
+.img-desove {
+  height: 90%;
+  width: 80%;
+  object-fit: cover;
+  justify-self: center;
 }
 
 .grid-item {
