--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -127,9 +127,28 @@
     border: solid #2a554f;
 }
 
+.grid-item3 {
+  color: white;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    border-radius: 5px;
+    margin-top: 10px;
+    border: solid #2a554f;
+}
+
 .grid-item2 img {
   width: 80px; 
   height: auto;
+  margin: 2px; 
+  transition: transform 0.2s ease-in-out;
+}
+
+.grid-item3 img {
+  width: 50px; 
+  height: 50px;
   margin: 2px; 
   transition: transform 0.2s ease-in-out;
 }
