--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -116,7 +116,7 @@
 }
 
 .grid-item2 span {
-  position: absolute;
+  position: relative;
   bottom: 5px;
   font-size: 12px;
   color: #333;
@@ -160,7 +160,7 @@
   }
 
 .tile-image {
-  position: absolute;
+  position: relative;
   bottom: -850px; /* Ajusta la distancia desde la parte inferior de la página */
   right: 20px; /* Ajusta la distancia desde el lado derecho de la página */
   width: 150px; /* Tamaño de la imagen */
