Salmones recolocados en sea tile

--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -95,7 +95,7 @@
 .grid-item2 {
   color: white;
     padding: 0px;
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     font-size: 18px;
