--- a/frontend/src/static/css/chat/chat.css
+++ b/frontend/src/static/css/chat/chat.css
@@ -19,7 +19,7 @@
   
   .chat-container {
     width: 300px;
-    height: 400px;
+    height: 500px;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -50,8 +50,8 @@
   
   .chat-message.own-message {
     align-self: flex-end;
-    background-color: #007bff;
-    color: white;
+    background-color: transparent;
+    color: black;
   }
   
   .chat-message .message-content {
