--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -192,12 +192,12 @@
 }
 
 .users-table {
-    position: absolute;
-    height: 50%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-top: 200px;
+  position: fixed;
+  top: 10vh;    /* Ajusta según prefieras */
+  left: 0vw;
+  width: 50vw;  /* O lo que necesites */
+  max-width: 500px;
+  z-index: 1000; /* Para que no lo tape nada */
 }
 
 .table-row {
@@ -233,4 +233,28 @@
   bottom: -850px; /* Ajusta la distancia desde la parte inferior de la página */
   right: 20px; /* Ajusta la distancia desde el lado derecho de la página */
   width: 150px; /* Tamaño de la imagen */
+}
+
+.table-row {
+  background-color: transparent;
+}
+
+.table-row-active td {
+  background-color: rgba(0, 255, 0, 0.3);
+}
+
+.move-your-salmons {
+  position: fixed;
+  bottom: 50vh;
+  left: 2vw;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.pick-the-tile-block {
+  position: fixed;
+  bottom: 5vh;  /* Aparece cerca de la parte baja de la pantalla */
+  left: 2vw;
+  cursor: pointer;
+  z-index: 1000;
 }
