--- a/frontend/src/static/css/game/game.css
+++ b/frontend/src/static/css/game/game.css
@@ -7,14 +7,6 @@
     text-align: center;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../../images/upStreamFondo.jpg');
     background-size: cover;
-    /* 
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    */
   }
 
 .game-container {
@@ -53,27 +45,31 @@
   margin-left: 1700px;
 }
 
-
-.grid1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    height: 80%;
-    background-color:  #3A6B76;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 110px;
+.salmon-img {
+  width: 80px;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  z-index: 2;
+  cursor: pointer;
+  border-radius: 40px;
 }
 
-.grid1-100 {
+.grid1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-  height: 100%;
-  background-color:  #3A6B76;
+  background-color: #3A6B76;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 110px;
+}
+
+.grid1-80 {
+  height: 80%;
+}
+
+.grid1-100 {
+  height: 100%;
 }
 
 .grid2 {
